--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>hello</h1>
+    <div class="main-body">
+        <div class="calc">
+            
+        </div>
+    </div>
 </body>
 </html>
