--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="main-body">
         <div class="calc">
             <div class="output">
-                <input type="text" class="screen"> 
+                <input type="text" id="screen"> 
 
             </div>
             <div class="buttons">
-                <button onclick="clear(7)" class="btn">C</button>
+                <button onclick="clearDisplay()" class="btn">C</button>
 
                 <div class="row">
                    <button onclick="buttonclick(7)" class="btn">7</button>
@@ -39,7 +39,7 @@
                     <button onclick="buttonclick('.')" class="btn">.</button>
                     <button onclick="buttonclick(0)" class="btn">0</button>
                     <button onclick="buttonclick('+')" class="btn">+</button>
-                    <button onclick="buttonclick('=')" class="btn">=</button>
+                    <button onclick="equalClick()" class="btn">=</button>
                 </div>
 
             </div>
